# CORE2017-Vision

./: .gitignore  .gitmodules  CMakeLists.txt  CORE2017-Vision.service  README.md  authorized_keys  buildAndStart.sh  fsExpandCheck_jessie.sh  interfaces  launch.sh  setupPi.sh
pegImages/practiceImages/: 325.avi
pitDisplay/: COREPitDisplay.service  pitDisplay.sh  slides.odp
src/: COREArgument.cpp  COREArgument.h  COREArgument.inc  captureImages.cpp  captureImages.h  main.cpp  visionProcessing.h
